Fixed hover color for  link button in dark mode

--- a/website/src/theme/BoxLink/styles.module.css
+++ b/website/src/theme/BoxLink/styles.module.css
@@ -19,3 +19,11 @@
 .container:hover {
   background-color: var(--ifm-color-gray-100);
 }
+
+html[data-theme="dark"] .container {
+  border-color: var(--ifm-color-gray-700);
+}
+
+html[data-theme="dark"] .container:hover {
+  background-color: var(--ifm-color-gray-800);
+}
